<resources>
    <string name="app_name">Spealth</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_news">News</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_client_id">260030164241-d4u3nqnn18s67cst8nhqe7ejg5d9vctd.apps.googleusercontent.com</string>

</resources>
